--- a/languages/ml/ocaml/books.org
+++ b/languages/ml/ocaml/books.org
@@ -517,15 +517,14 @@
 
 ** 5 Records
 - Records are immutable by default
-#+begin_src
+ #+begin_src
   type <record-name> =
     { <field> : <type>;
       <field> : <type>;
       ...
     }
-#+end_src
-- Core provides a Unix API
-- Record parametrized by a =polymorphic type=
+ #+end_src
+- a record parametrized by a =polymorphic type=
   #+begin_src ocaml
     type 'a with_line_num = { item: 'a ; line_num: int }
   #+end_src
@@ -569,24 +568,14 @@
 - Pattern matching for types with a fixed structure (records/tuples) are ~irrefutable~
   - Meaning it will never fail at runtime
 - Pattern matching might not be detail each field, but is recommended.
-  - #warning "+9"
-    will enable the compiler warning for not exaustive pattern match of records
+  - #warning "+9";; will enable the compiler warning for not exaustive pattern match of records
   - _ as the last pattern matched field, will override the warning and match everything else
     - Is a good idea to enable warning (+9) for incomplete record matches
       and explicitly disable it with (_) when necessary.
-- Building: Warning Help
-  $ ocaml -warn-help | egrep '\b9\b'
-- Building:
-  - Enable warnings as errors
-    -w @A-4-33-40-41-42-43-34-44
-  - Default warnings as errors
-    -warn-error -a+31 (only warning 31 is fatal).
-  - Default warnings
-    -w +a-4-7-9-27-29-30-32..42-44-45-48-50-60-66..70.
 *** Field Punning (for destructuring and constructing)
-- Encourage a style where you propagate the same names throughout your codebase.
-  Consistent naming.
 - =Fields punning= is when the name of a variable coincides with the name of a record field.
+- Encourages a style where you propagate the same names throughout your codebase.
+  Consistent naming.
 - Example: To either destruct or construct a record.
   #+begin_src ocaml
     let service_info_to_string { service_name; port; protocol; comment } =
@@ -610,45 +599,46 @@
     #+NAME: defining 3 new records, with common field names
     #+begin_src ocaml
       type log_entry =
-        { session_id: string;
-          time: Time_ns.t;
-          important: bool;
-          message: string;
+        { session_id : string;
+          time       : Time_ns.t;
+          important  : bool;
+          message    : string;
         }
       type heartbeat =
-        { session_id: string;
-          time: Time_ns.t;
-          status_message: string;
+        { session_id     : string;
+          time           : Time_ns.t;
+          status_message : string;
         }
       type logon =
-        { session_id: string;
-          time: Time_ns.t;
-          use: string;
-          credentials: string;
+        { session_id  : string;
+          time        : Time_ns.t;
+          use         : string;
+          credentials : string;
         }
     #+end_src
     #+NAME: defining 3 new records, module encapsulated
     #+begin_src ocaml
       module Log_entry = struct
         type t =
-          { session_id: string;
-            time: Time_ns.t;
-            important: bool;
-            message: string;          }
+          { session_id : string
+          ; time       : Time_ns.t
+          ; important  : bool
+          ; message    : string
+          }
       end
       module Heartbeat = struct
         type t =
-          { session_id: string;
-            time: Time_ns.t;
-            status_message: string;
+          { session_id     : string
+          ; time           : Time_ns.t
+          ; status_message : string
           }
       end
       module Logon = struct
         type t =
-          { session_id: string;
-            time: Time_ns.t
-            user: string;
-            credentials: string;
+          { session_id  : string
+          ; time        : Time_ns.t
+          ; user        : string
+          ; credentials : string
           }
       end
     #+end_src
